--- a/settings/project.json
+++ b/settings/project.json
@@ -1,3 +1,4 @@
 {
-  "start-scene": "cdb590d0-ee27-4e73-b9d0-64e1a1928060"
+  "start-scene": "cdb590d0-ee27-4e73-b9d0-64e1a1928060",
+  "last-module-event-record-time": 1631203293304
 }
